# flux1

./: .gitignore  IMPLEMENTATION_DETAILS.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
plugins/: types.ts
plugins/calculator/: index.ts  plugin.json
plugins/clipboard/: index.ts  plugin.json
plugins/web-search/: index.ts  plugin.json
src-backend/: main.rs
src-backend/commands/: mod.rs  open_app.rs  open_file.rs
src-backend/search/: indexer.rs  mod.rs  query.rs
src-backend/system/: app_scanner.rs  file_scanner.rs  mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/database/: index.db
src-tauri/src/: backend.rs  main.rs
src/frontend/: App.tsx
src/frontend/components/: CommandBar.tsx  ResultItem.tsx  ResultList.tsx
src/frontend/hooks/: useKeyboardNav.ts  usePlugins.ts  useSearch.ts
src/frontend/pages/: Launcher.tsx
src/frontend/styles/: global.css
