[package]
name = "flux-launcher"
version = "0.1.0"
description = "Flux Launcher - high-performance keyboard-driven launcher"
authors = ["Flux Launcher"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono", "functions"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
arboard = "3.3"

